<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_theme">
        <item
            android:id="@+id/action_theme_light"
            android:title="@string/theme_light"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_theme_dark"
            android:title="@string/theme_dark"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_theme_system"
            android:title="@string/theme_phone"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/checkboxes">
        <item
            android:id="@+id/action_inner_pdf_reader"
            android:title="@string/inner_pdf_reader"
            app:showAsAction="never"
            android:checkable="true"
            android:checked="true" />
    </group>

    <group android:id="@+id/group_save_load">
        <item
            android:id="@+id/action_save"
            android:title="@string/save_settings_to_storage"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_load"
            android:title="@string/load_settings_from_storage"
            app:showAsAction="never" />
    </group>
</menu>