<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="SpUsage, RtlHardcoded, ContentDescription">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pwd_popup_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_pdf_password"
        android:textAlignment="center"
        android:textSize="@dimen/dp_18"
        android:textColor="@color/signature_chooser_title_text_color"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/pwd_content_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/pwd_popup_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pwd_cancel">

        <hu.reelee81.pdflabelprinting.PasswordToggleEditText
            android:id="@+id/pwd_edittext"
            style="@style/Widget.PdfLabelPrinting.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:drawableEnd="@drawable/ic_visibility_off_24"
            android:drawablePadding="@dimen/dp_8"
            android:textColorHint="@color/password_hint_text_color"
            android:contentDescription="@string/toggle_password_visibility" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pwd_cancel"
        style="@style/PdfLabelPrinting.TextButton"
        android:text="@string/cancel_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/pwd_ok"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pwd_ok"
        style="@style/PdfLabelPrinting.TextButton"
        android:text="@string/ok_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/pwd_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/pwd_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>