<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="SpUsage, RtlHardcoded">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bo_popup_title"
        android:text="@string/battery_optimization"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/dp_18"
        android:textColor="@color/signature_chooser_title_text_color"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bo_root_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:fillViewport="true"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/bo_popup_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bo_bottom_panel">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bo_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/battery_optimization_text"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:gravity="center"
            android:textSize="@dimen/dp_14" />
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bo_bottom_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bo_btn_cancel"
            style="@style/PdfLabelPrinting.TextButton"
            android:text="@string/cancel_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bo_btn_ok"
            style="@style/PdfLabelPrinting.TextButton"
            android:text="@string/ok_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>