<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="SpUsage">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pdf_editor_discard_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_12"
        android:gravity="center"
        android:text="@string/discard_pdf_edits"
        android:textAlignment="center"
        android:textSize="@dimen/dp_18"
        app:layout_constraintBottom_toTopOf="@id/pdf_editor_discard_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pdf_editor_discard_cancel"
        style="@style/PdfLabelPrinting.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/pdf_editor_discard_confirm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pdf_editor_discard_confirm"
        style="@style/PdfLabelPrinting.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/discard_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/pdf_editor_discard_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/pdf_editor_discard_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>