<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="SpUsage, RtlHardcoded">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signature_popup_title"
        android:text="@string/signature_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/dp_18"
        android:textColor="@color/signature_chooser_title_text_color"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <FrameLayout
        android:id="@+id/sp_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/signature_popup_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sp_btn_cancel">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sp_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@null" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sp_btn_cancel"
        style="@style/PdfLabelPrinting.TextButton"
        android:text="@string/cancel_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sp_btn_ok"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sp_btn_ok"
        style="@style/PdfLabelPrinting.TextButton"
        android:text="@string/ok_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/sp_btn_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/sp_btn_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>